<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_contact_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.rbzeta.contactmanager.activity.ContactDetailActivity"
    tools:showIn="@layout/activity_contact_detail">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackground"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img_contact_detail"
            android:layout_width="@dimen/img_contact_detail_width"
            android:layout_height="@dimen/img_contact_detail_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account_circle_black_24dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_favorite_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_favorite_border_black_24dp"
                tools:ignore="ContentDescription"
                android:layout_margin="@dimen/text_contact_detail_margin"/>

            <TextView
                android:id="@+id/text_contact_detail_name"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="@dimen/text_contact_detail_margin"
                android:paddingStart="@dimen/text_name_detail_padding_start"
                android:text="@string/text_first_name"
                android:textAlignment="center"
                android:clickable="true"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_contact_detail_phone_number"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/text_contact_detail_margin"
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:text="@string/text_test_phone"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/text_contact_detail_sms"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/text_contact_detail_margin"
            android:drawableStart="@drawable/ic_textsms_black_24dp"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:text="@string/text_send_message"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/text_contact_detail_email"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/text_contact_detail_margin"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:text="@string/text_test_email"
            android:autoLink="email"
            android:linksClickable="true"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/text_contact_detail_share"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/text_contact_detail_margin"
            android:drawableStart="@drawable/ic_share_black_24dp"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:text="@string/text_share_contact"
            android:autoLink="email"
            android:linksClickable="true"
            android:textAlignment="center" />


    </LinearLayout>

</RelativeLayout>
